--- a/app/assets/javascripts/angular-app/templates/top-articles.html
+++ b/app/assets/javascripts/angular-app/templates/top-articles.html
@@ -2,7 +2,7 @@
 <div>
   <ul class="articles">
     <li ng-repeat="article in top.articles">
-      <p>{{article.title}}</p>
+      <p><a ng-href="#top-article" ng-click="top.showArticle(article.id)">{{article.title}}</a></p>
     </li>
   </ul>
 </div>
