deleted templates folder

--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,8 +1,8 @@
-<h1>Top NYT Stories</h1>
+<h1>Top NYT Articles</h1>
 <div>
   <ul class="articles">
-    <li ng-repeat="article in top.articles">
-      <p><a ng-href="#top-article">{{article.title}}</a></p>
+    <li ng-repeat="data in top.data">
+      <p><{{top.data[1]}}/p>
     </li>
   </ul>
 </div>
