--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NytHeadlines</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
+  <title>Creatify</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-
 <body ng-app="app">
 
-  <div ui-view></div>
+<%= render 'layouts/header' %>
+<div ui-view></div>
+
+<%= content_tag(:div, flash[:error], id: "flash_error") if flash[:error] %>
+<%= content_tag(:div, flash[:notice], id: "flash_notice") if flash[:notice] %>
+<%= content_tag(:div, flash[:alert], id: "flash_alert") if flash[:alert] %>
+<%= yield %>
 
 </body>
 
-</body>
 </html>
