--- a/app/assets/templates/article.html
+++ b/app/assets/templates/article.html
@@ -1,15 +1,19 @@
-<h1>{{data.value.data.title}}</h1>
+<h1>{{article.data.value.data.title}}</h1>
 <div>
-  <p>Abstract: {{data.value.data.abstract}}</p>
-  <p>Byline: {{data.value.data.byline}}</p>
-  <p>Section: {{data.value.data.section}}</p>
-  <p>Date Published: {{data.value.data.published_date}}</p>
-  <p>Other categories: {{data.value.data.material_type_facet}}</p>
-  <p><a href="{{data.value.data.url}}">{{data.value.data.url}}</a></p>
+  <p>Abstract: {{article.data.value.data.abstract}}</p>
+  <p>Byline: {{article.data.value.data.byline}}</p>
+  <p>Section: {{article.data.value.data.section}}</p>
+  <p>Date Published: {{article.data.value.data.published_date}}</p>
+  <p>Other categories: {{article.data.value.data.material_type_facet}}</p>
+  <p><a href="{{article.data.value.data.url}}">{{article.data.value.data.url}}</a></p>
 </div>
 
 <p>What do you think about this article? Tell us in the comments below:</p>
-<form ng-submit="submitComment()">
-  <textarea ng-model="commentContent"></textarea><br>
+<form ng-submit="article.submitComment()">
+  <textarea ng-model="article.commentContent"></textarea><br>
   <input type="submit">
 </form>
+
+<div ng-repeat="comment in article.data.value.data.comments">
+  <p>{{comment.content}}</p>
+</div>
