--- a/app/assets/templates/businessDay.html
+++ b/app/assets/templates/businessDay.html
@@ -1,5 +1,7 @@
 <h1>Top NYT Stories</h1>
 <div>
   <h4><a href="#">Articles in the Business Day Section</a></h4>
-      <p>{{data.value}}</p>
+    <div ng-repeat="article in filteredArticles">
+      <p>{{article.title}}</p>
+    </div>
 </div>
