--- a/app/assets/templates/home.html
+++ b/app/assets/templates/home.html
@@ -1,7 +1,12 @@
 <h1>Top NYT Stories</h1>
 <div>
+ <h4><a ui-sref="businessDay">Business Day</a></h4>
+ <h4><a ui-sref="home.technology">Technology</a></h4>
+
+<div ui-view></div>
+
+ <h4><a ui-sref="united-states">U.S.</a></h4>
  <input ng-model="top.search"/>
-  <h4><a href="#">Articles in the Business Day Section</a></h4>
   <ul class="articles">
     <li ng-repeat="article in top.data.value.data | filter: top.search">
       <p><a ng-href="/#/article/{{article.id}}">{{article.title}}</a></p>
