--- a/app/assets/templates/article.html
+++ b/app/assets/templates/article.html
@@ -8,6 +8,8 @@
   <p><a href="{{article.data.value.data.url}}">{{article.data.value.data.url}}</a></p>
 </div>
 
+<a href="#" ng-click="article.bookmarkArticle()">Bookmark this article</a>
+
 <p>What do you think about this article? Tell us in the comments below:</p>
 <form name="form" ng-submit="article.submitComment()">
   <textarea name="commentContent" required="required" ng-model="article.commentContent"></textarea><br>
