--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,4 +18,11 @@
 
 </body>
 
+<script type="text/javascript">
+    window.currentUser = {
+        id : "<%=current_user.id if current_user %>",
+        movies: <%=[]%>
+    }
+</script>
+
 </html>
