add current user's books to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,6 +8,7 @@
           <% if current_user %>
             <p><a ui-sref="movies">Movies</a></p>
              <p><a ui-sref="my-movies">My Movies</a></p>
+             <p><a ui-sref="my-books">My Books</a></p>
             <%= link_to "Sign out", destroy_user_session_path, :class => "nav_button", method: :delete %>
           <%else%>
             <%= link_to "Sign In", user_session_path, :class => "nav_button"%>
