--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 <script type="text/javascript">
     window.currentUser = {
         id : "<%=current_user.id if current_user %>",
-        movies: <%=[]%>
+        movies: <%=[]%>,
+        books: <%=[]%>
     }
 </script>
 
