add nested views to books page

--- a/app/assets/templates/books.html
+++ b/app/assets/templates/books.html
@@ -1,7 +1,10 @@
-<h1>Top NYT Bestsellers</h1>
 <div>
- 
+
+<h4><a ui-sref="books.fiction">Fiction</a> <a ui-sref="books.nonfiction">Nonfiction</a></h4>
+
 <div ui-view></div>
+
+<h1>Top NYT Bestsellers</h1>
 
  <input ng-model="book.search"/>
   <ul class="books">
