modify search functionality

--- a/app/assets/templates/books.html
+++ b/app/assets/templates/books.html
@@ -4,11 +4,11 @@
 
 <div ui-view></div>
 
-<h1>Top NYT Bestsellers</h1>
+<h1>The New York Times Bestsellers</h1>
 
  <input ng-model="book.search"/>
   <ul class="books">
-    <li ng-repeat="book in books.data.value.data | filter: top.search">
+    <li ng-repeat="book in books.data.value.data | filter: book.search">
       <p><a ng-href="/#/books/{{book.id}}">{{book.title}}</a></p>
     </li>
   </ul>
