--- a/app/assets/templates/nonfiction.html
+++ b/app/assets/templates/nonfiction.html
@@ -1,7 +1,7 @@
 <h1>Nonfiction Bestsellers</h1>
 <div>
     <ul class="books">
-    <li ng-repeat="book in filteredBooks">
+    <li ng-repeat="book in nonfiction.filteredBooks">
       <p><a ng-href="/#/books/{{book.id}}">{{book.title}}</a></p>
     </li>
   </ul>
