--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,23 +1,20 @@
-<div class="header">
-<div id="title">
-</div>
-
-<br><br>
 <nav class="nav">
-    <ul>
-          <% if current_user %>
-            <p><a ui-sref="movies">Movies</a></p>
-             <p><a ui-sref="my-movies">My Movies</a></p>
-             <p><a ui-sref="my-books">My Books</a></p>
-            <%= link_to "Sign out", destroy_user_session_path, :class => "nav_button", method: :delete %>
-          <%else%>
-            <%= link_to "Sign In", user_session_path, :class => "nav_button"%>
-            <%= link_to "Sign up", new_user_registration_path, :class => "nav_button" %>
-          <% end %> 
-
-    </ul>
+    <%= link_to "Books And Movies", root_path, :class => "title" %>
+    
+      <% if current_user %>
+        <div class="current_user">
+          <a ui-sref="movies">Movies</a>
+          <a ui-sref="my-movies">My Movies</a>
+          <a ui-sref="books">Books</a>
+          <a ui-sref="my-books">My Books</a>
+          <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+        </div>
+      <%else%>
+          <%= link_to "Sign In", user_session_path, :class => "nav_button" %>
+          <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %> 
 </nav>
-</div>
+
 <br><br><br>
 <% if current_user %>
    <div class="welcome">Hello <%= current_user.email %>!<br><br></div>
