--- a/app/assets/templates/book.html
+++ b/app/assets/templates/book.html
@@ -1,4 +1,5 @@
 <h1>{{book.data.value.data.title}}</h1>
+<img src={{book.data.value.data.image}}>
 <div>
   <p>Description: {{book.data.value.data.description}}</p>
   <p>Publisher: {{book.data.value.data.publisher}}</p>
