--- a/app/assets/templates/movie.html
+++ b/app/assets/templates/movie.html
@@ -1,4 +1,5 @@
 <h1>{{movie.data.value.data.display_title}}</h1>
+<img src={{movie.data.value.data.image}}>
 <div>
   <p>MPAA Rating: {{movie.data.value.data.mpaa_rating}}</p>
   <p>Critics Pick: {{movie.data.value.data.critics_pick}}</p>
