--- a/app/assets/templates/book.html
+++ b/app/assets/templates/book.html
@@ -1,5 +1,5 @@
 <h1>{{book.data.value.data.title}}</h1>
-<img src={{book.data.value.data.image}}>
+<img src={{book.data.value.data.image}}><br><br><br>
 <div>
   <p>Description: {{book.data.value.data.description}}</p>
   <p>Publisher: {{book.data.value.data.publisher}}</p>
