remove unordered list for all templates

--- a/app/assets/templates/fiction.html
+++ b/app/assets/templates/fiction.html
@@ -1,8 +1,8 @@
 <h1>Fiction Bestsellers</h1>
 <div>
-    <ul class="books">
-    <li ng-repeat="book in fiction.filteredBooks">
+  <div class="books">
+    <div ng-repeat="book in fiction.filteredBooks">
       <p><a ng-href="/#/books/{{book.id}}">{{book.title}}</a></p>
-    </li>
-  </ul>
+    </div>
+  </div>
 </div>
