--- a/app/assets/templates/movies.html
+++ b/app/assets/templates/movies.html
@@ -4,9 +4,9 @@
 <div ui-view></div>
 
  <input ng-model="movies.search"/>
-  <ul class="movies">
-    <li ng-repeat="movie in movies.data.value.data | filter: movies.search">
-      <p><a ng-href="/#/movies/{{movie.id}}">{{movie.display_title}}</a></p>
-    </li>
-  </ul>
+  <div class="movies">
+    <div ng-repeat="movie in movies.data.value.data | filter: movies.search">
+      <p><a ui-sref="movie({id: movie.id})">{{movie.display_title}}</a></p>
+    </div>
+  </div>
 </div>
