--- a/app/assets/templates/myBooks.html
+++ b/app/assets/templates/myBooks.html
@@ -1,8 +1,8 @@
  <h4><a href="#" ng-click="myBooks.getMyBooks()">Click Here To See Your Bookmarked Books</a></h4>
 
-<ul class="books">
-    <p>{{currentUser}}</p>
-    <li ng-repeat="book in myBooks.books">
-      <p><a ng-href="/#/book/{{book.id}}">{{book.title}}</a></p>
-    </li>
-  </ul>
+<div class="books">
+  <p>{{currentUser}}</p>
+  <div ng-repeat="book in myBooks.books">
+    <p><a ng-href="/#/books/{{book.id}}">{{book.title}}</a></p>
+  </div>
+</div>
