--- a/app/assets/templates/myMovies.html
+++ b/app/assets/templates/myMovies.html
@@ -1,8 +1,8 @@
  <h4><a href="#" ng-click="myMovies.getMyMovies()">Click Here To See Your Bookmarked Movies</a></h4>
 
-<ul class="movies">
-    <p>{{currentUser}}</p>
-    <li ng-repeat="movie in myMovies.movies">
-      <p><a ng-href="/#/movie/{{movie.id}}">{{movie.display_title}}</a></p>
-    </li>
-  </ul>
+<div class="movies">
+  <p>{{currentUser}}</p>
+  <div ng-repeat="movie in myMovies.movies">
+    <p><a ng-href="/#/movies/{{movie.id}}">{{movie.display_title}}</a></p>
+  </div>
+</div>
