--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,25 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body ng-app="app">
 
 <%= render 'layouts/header' %>
+
+<div class="content">
+
+<% if current_user %>
+   <div class="welcome">Hello <%= current_user.email %>!<br><br></div>
+<% end %>
+
+<%= content_tag(:div, flash[:error]) if flash[:error] %>
+<%= content_tag(:div, flash[:notice]) if flash[:notice] %>
+<%= content_tag(:div, flash[:alert]) if flash[:alert] %>
+
 <div ui-view></div>
 
-<%= content_tag(:div, flash[:error], id: "flash_error") if flash[:error] %>
-<%= content_tag(:div, flash[:notice], id: "flash_notice") if flash[:notice] %>
-<%= content_tag(:div, flash[:alert], id: "flash_alert") if flash[:alert] %>
 <%= yield %>
+</div>
 
 </body>
 
