add edit and delete links to movie

--- a/app/assets/templates/movie.html
+++ b/app/assets/templates/movie.html
@@ -1,3 +1,5 @@
+<a ui-sref="edit-movie({id: movie.data.value.data.id})">Edit</a>
+<a href="#" ng-click="movie.deleteMovie()">Delete</a>
 <h1>{{movie.data.value.data.display_title}}</h1>
 <img src={{movie.data.value.data.image}}><br><br><br>
 <div>
