add two-way data binding

--- a/app/assets/templates/books.html
+++ b/app/assets/templates/books.html
@@ -1,12 +1,15 @@
 <div>
 
-<h4><a ui-sref="books.fiction">Fiction</a> <a ui-sref="books.nonfiction">Nonfiction</a></h4>
+<h4><a ui-sref="books.fiction">Fiction</a> | <a ui-sref="books.nonfiction">Nonfiction</a></h4>
 
 <div ui-view></div>
 
 <h1>The New York Times Bestsellers</h1>
-
- <input ng-model="book.search"/>
+<br>
+ <p>Search for a book here:</p>
+ <p>
+ <input data-ng-model="book.search"/><br><br>
+ <p>{{ book.search }}</p>
   <div class="books">
     <div ng-repeat="book in books.data.value.data | filter: book.search">
       <p><a ui-sref="book({id: book.id})">{{book.title}}</a></p>
