edit confirmation message for book and movie

--- a/app/assets/templates/edit-book.html
+++ b/app/assets/templates/edit-book.html
@@ -1,3 +1,6 @@
+<br>
+<p>{{book.edit_message}}</p>
+
 <p>{{movies.data}}</p>
 <h2>Edit Book</h2><br>
 <form name="form" ng-submit="book.editBook()">
