modified variable name

--- a/app/assets/templates/new-movie.html
+++ b/app/assets/templates/new-movie.html
@@ -1,5 +1,5 @@
 <br>
-<p>{{movie.new_message}}</p>
+<p>{{movies.new_message}}</p>
 
 <h2>Add A New Movie</h2><br>
 <form name="form" ng-submit="movies.addMovie()">
