--- a/app/assets/templates/movie.html
+++ b/app/assets/templates/movie.html
@@ -4,15 +4,15 @@
 <a class="btn btn-primary" ui-sref="edit-movie({id: movie.data.value.data.id})">Edit</a>
 <a class="btn btn-primary" href="#" ng-click="movie.deleteMovie()">Delete</a>
 
-<h1>{{movie.data.display_title}}</h1>
-<img src={{movie.data.image}}><br><br><br>
+<h1>{{movie.data.value.data.display_title}}</h1>
+<img src={{movie.data.value.data.image}}><br><br><br>
 <div>
-  <p>MPAA Rating: {{movie.data.mpaa_rating}}</p>
-  <p>Critics Pick: {{movie.data.critics_pick}}</p>
-  <p>Byline: {{movie.data.byline}}</p>
-  <p>Headline: {{movie.data.headline}}</p>
-  <p>Short summary: {{movie.data.summary_short}}</p>
-  <p>Opening date: {{movie.data.opening_date}}</p>
+  <p>MPAA Rating: {{movie.data.value.data.mpaa_rating}}</p>
+  <p>Critics Pick: {{movie.data.value.data.critics_pick}}</p>
+  <p>Byline: {{movie.data.value.data.byline}}</p>
+  <p>Headline: {{movie.data.value.data.headline}}</p>
+  <p>Short summary: {{movie.data.value.data.summary_short}}</p>
+  <p>Opening date: {{movie.data.value.data.opening_date}}</p>
 </div>
 
 <a class="btn btn-info" href="#" ng-click="movie.bookmarkMovie()">Bookmark this movie</a><br><br><br>
