--- a/app/assets/templates/movie.html
+++ b/app/assets/templates/movie.html
@@ -44,8 +44,23 @@
 <br><br>
 
 <div class="review" ng-repeat="review in movie.data.value.data.movie_reviews">
+ <p>{{review.helpful_count}} users have found this review helpful.</p>
   <br>
+
   {{review.user.name}}<br>
   <p class="rating">{{review.rating}} stars</p>
-  {{review.content}}<br>
+  <p>{{movie.currentUser.rated_movie_reviews}}</p>
+  <p>{{review.id}}</p>
+  <p>{{review.content}}</p><br>
+
+  <div ng-if="(movie.currentUser.id != '') && (movie.currentUser.rated_movie_reviews.indexOf(review.id) < 0)">
+    <p>Was this review helpful to you?</p>
+    <a href="#" ng-click="movie.helpfulReview(movie, review)">Yes</a>
+    <a href="#">No</a>
+  </div>
+
+  <div ng-if="(movie.currentUser.rated_movie_reviews.indexOf(review.id) > 0)">
+    <p class="green">Thank you for your rating!</p>
+  </div>
+
 </div>
