add user's name to review

--- a/app/assets/templates/movie.html
+++ b/app/assets/templates/movie.html
@@ -48,7 +48,7 @@
  <p>{{review.unhelpful_count}} users have found this review unhelpful.</p>
   <br>
 
-  {{currentUser.name}}<br>
+  <p>By: {{review.creator.name}}</p>
   <p class="rating">{{review.rating}} stars</p>
 
   <p>{{review.content}}</p><br>
