--- a/app/assets/templates/books.html
+++ b/app/assets/templates/books.html
@@ -1,6 +1,7 @@
-<h3>Popular Books</h3><br>
+<h3 class="popular">Popular Books</h3><br>
 <p>This is a list of the latest NYT Bestsellers. Don't see your favorite book? Add one here.</p>
 <a ui-sref="new-book">New Book</a><br><br>
+<hr>
 <h4><a ui-sref="books.fiction">Fiction</a> | <a ui-sref="books.nonfiction">Nonfiction</a></h4>
 
 <div ui-view></div>
