--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,17 +28,24 @@
   padding-left: 20px;
 }
 
+.btn-info{
+  padding: 10px;
+  border-radius: 3px;
+  font-size: 15px;
+}
+
 .title:hover, .title:visited, .title:active{
   text-decoration: none;
   font-size: 25px;
   color: white;
 }
 
-.menu:hover{
+.current_user:visited, .current_user:hover, .current_user1:visited, .current_user1:hover, .menu:hover{
   background-color: #6495ed;
   text-decoration: none;
   padding-bottom: 2px;
   padding-top: 2px;
+  color: white;
 }
 
 .menu:visited{
@@ -47,7 +54,19 @@
 }
 
 .current_user{
-  margin-left: 950px;
+  color: white;
+  padding: 10px;
+  padding-bottom: 20px;
+  font-size: 18px;
+  margin-left: 650px;
+}
+
+.current_user1{
+  color: white;
+  padding: 10px;
+  padding-bottom: 20px;
+  font-size: 18px;
+  margin-left: 650px;
 }
 
 .content{
@@ -58,6 +77,7 @@
   color: white;
   padding: 10px;
   padding-bottom: 20px;
+  font-size: 18px;
 }
 
 .rating{
@@ -81,11 +101,18 @@
 }
 
 .navbar-inverse{
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 .green{
   color: green;
 }
 
+.popular{
+  font-weight: bold;
+}
 
+hr{
+  border-width: 2px;
+  color: black;
+}
