--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,16 @@
 <nav class="navbar-inverse">
-    <%= link_to "Books And Movies", root_path, :class => "title" %>
+    <br>
+    <%= link_to "Books And Movies", '/', :class => "title" %>
 
       <% if current_user %>
-        <div class="current_user">
-          <a ui-sref="movies" class="menu">Movies</a>
+          <a ui-sref="movies" class="current_user1">Movies</a>
           <a ui-sref="my-movies" class="menu">My Movies</a>
           <a ui-sref="books" class="menu">Books</a>
           <a ui-sref="my-books" class="menu">My Books</a>
           <%= link_to "Sign out", destroy_user_session_path, :class => "menu", method: :delete %>
-        </div>
       <%else%>
-        <div class="current_user">
-          <%= link_to "Sign In", user_session_path, :class => "menu" %>
+          <%= link_to "Sign In", user_session_path, :class => "current_user" %>
           <%= link_to "Sign Up", new_user_registration_path, :class => "menu" %>
-        </div>
       <% end %> 
 </nav>
 
